[package]
name = "besi"
version = "0.1.0"
edition = "2024"
description = "A unit of measurement utility for use with Bevy."
keywords = ["units", "bevy", "measurement"]
categories = ["science", "value-formatting"]
authors = ["Fishy"]
readme = "README.md"
repository = "https://github.com/fishykins/besi/"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_reflect = { version = "0.18", optional = true }
bevy_math = { version = "0.18", optional = true }
serde = { version = "1.0", features = ["derive"] }
inventory = "0.3"
paste = "1.0"
num-traits = "0.2.19"

[features]
default = ["reflect", "position"]
reflect = ["dep:bevy_reflect"]
position = ["dep:bevy_math"]